--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -3,4 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Item" />
+
+    <item android:id="@+id/action_about"
+        android:title="@string/about"/>
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/settings"/>
 </menu>
