--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -2,11 +2,9 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
-
-    <item android:id="@+id/action_about"
+    <item android:id="@+id/about"
         android:title="@string/about"/>
 
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/settings"
         android:title="@string/settings"/>
 </menu>
